...
                            <constraint firstItem="oll-xk-kS3" firstAttribute="bottom" secondItem="Qgv-qa-jbl" secondAttribute="bottom" id="VoW-1Y-g9E"/>
                            <constraint firstItem="Qgv-qa-jbl" firstAttribute="top" secondItem="oll-xk-kS3" secondAttribute="top" id="wTQ-X0-QgZ"/>
                            <constraint firstItem="oll-xk-kS3" firstAttribute="trailing" secondItem="Qgv-qa-jbl" secondAttribute="trailing" id="zmU-sJ-Wu7"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="oll-xk-kS3"/>
                    </view>
                    <navigationItem key="navigationItem" title="Categories" id="Du3-Ss-IP4">
                        <barButtonItem key="rightBarButtonItem" title="+" id="prz-Bx-Baf">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <segue destination="ytg-X3-NeR" kind="show" id="nx6-mG-c02"/>
                            </connections>
                        </barButtonItem>
...
            <objects>
                <viewController id="ytg-X3-NeR" customClass="CreateNewCategoryViewController" customModule="BitsApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="YCi-TY-gqf">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Category Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CqH-sv-Qmk">
                                <rect key="frame" x="8" y="32" width="398" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z5U-dN-pco">
                                <rect key="frame" x="114" y="110" width="186" height="40"/>
                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="21"/>
                                <state key="normal" title="Create Category">
                                    <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="pressCreateButton:" destination="ytg-X3-NeR" eventType="touchUpInside" id="eNg-J5-XQE"/>
                                </connections>
                            </button>
...
